--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ tf/tf_files/bottlenecks/*
 !tf/tf_files/bottlenecks/.empty
 tf/tf_files/dataset/*
 !tf/tf_files/dataset/.empty
+tf/tf_files/datatest/*
+!tf/tf_files/datatest/.empty
 tf/tf_files/uploads/dataset/*
 !tf/tf_files/uploads/dataset/.empty
 tf/tf_files/uploads/user-images/*
