add tests images

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ tf/tf_files/uploads/dataset/*
 !tf/tf_files/uploads/dataset/.empty
 tf/tf_files/uploads/user-images/*
 !tf/tf_files/uploads/user-images/.empty
-
+tf/tf_files/retrained_graph.pb
+tf/tf_files/retrained_graph.txt
 
 ### Python ###
 __pycache__/
