add tests image v2

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ tf/tf_files/retrained_graph.pb
 tf/tf_files/retrained_labels.txt
 tf/tf_files/saved_models/*
 !tf/tf_files/saved_models/.empty
-
+tf_files
 ### Python ###
 __pycache__/
 
